# xmipp4-mpi

./: CHANGELOG.md  CMakeLists.txt  README.md  pyproject.toml  renovate.json
.github/workflows/: build-and-test.yml  deploy.yml  release.yml
conda/: meta.yaml
src/: mpi_plugin.cpp  mpi_plugin.hpp  mpi_plugin_hook.cpp
src/communication/mpi/: mpi_convert.cpp  mpi_convert.hpp  mpi_datatype.cpp  mpi_datatype.hpp  mpi_error.cpp  mpi_error.hpp  mpi_host_all_reduce_operation.cpp  mpi_host_barrier_operation.cpp  mpi_host_broadcast_operation.cpp  mpi_host_communicator.cpp  mpi_host_communicator.hpp  mpi_host_communicator_backend.cpp  mpi_host_communicator_backend.hpp  mpi_host_operation.cpp  mpi_host_operation.hpp  mpi_host_receive_operation.cpp  mpi_host_reduce_operation.cpp  mpi_host_send_operation.cpp  mpi_instance.cpp  mpi_instance.hpp  mpi_reduction.cpp  mpi_reduction.hpp
src/communication/mpi/mpi_host_operations/: mpi_host_all_gather_operation.cpp  mpi_host_all_gather_operation.hpp  mpi_host_all_reduce_operation.cpp  mpi_host_all_reduce_operation.hpp  mpi_host_barrier_operation.cpp  mpi_host_barrier_operation.hpp  mpi_host_broadcast_operation.cpp  mpi_host_broadcast_operation.hpp  mpi_host_gather_operation.cpp  mpi_host_gather_operation.hpp  mpi_host_receive_operation.cpp  mpi_host_receive_operation.hpp  mpi_host_reduce_operation.cpp  mpi_host_reduce_operation.hpp  mpi_host_scatter_operation.cpp  mpi_host_scatter_operation.hpp  mpi_host_send_operation.cpp  mpi_host_send_operation.hpp
tests/integration/: CMakeLists.txt
tests/integration/src/: test_load.cpp
