[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "xmipp4-mpi"
dynamic = ["version"]
authors = [
    { name = "Oier Lauzirika Zarrabeitia", email = "oierlauzi@bizkaia.eu" },
    { name = "Martín Salinas Antón", email = "ssalinasmartin@gmail.com" },
    { name = "Mikel Iceta Tena", email = "m.icetatena@gmail.com" },
]
description = "MPI collective communications extension for xmipp4"
classifiers = [
	"Topic :: Scientific/Engineering :: Image Processing",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Windows",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: C++"
]

readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}

requires-python = ">=3.7"
dependencies = [ 
    "xmipp4-core==0.1"
]

[project.urls]
Homepage = "https://github.com/gigabit-clowns/xmipp4-mpi"

[tool.scikit-build]
experimental=true # For wheel.install-dir
wheel.install-dir="/data"
wheel.py-api = "py3" # Python version agnostic
cmake.version = ">=3.16"
cmake.args = []
cmake.verbose = false
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
BUILD_TESTING = "OFF"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "VERSION"
regex = "(?P<value>\\d+\\.\\d+\\.\\d+)"
